# Orbital

./:   .clang-tidy  .exrc  .gitignore  .gitmodules  .ignore  <  CMakeLists.txt  Doxyfile  README.md  build.sh  configure.ps1  configure.sh  execute  imgui.ini  log  main.py  release.sh  run.ps1  run.sh  run_tests.sh  tasks.py  vcpkg.json
Orbital/: CMakeLists.txt
Orbital/OrbitalECS/: CMakeLists.txt
Orbital/OrbitalECS/src/: ECS.cpp
Orbital/OrbitalECS/tests/: ecs_test.cpp
Orbital/OrbitalEngine/: CMakeLists.txt  create_game_executable_macro.cmake  create_game_library_macro.cmake  create_game_scripts_macro.cmake
Orbital/OrbitalEngine/src/: DebugLayer.cpp  Library.cpp  LibraryLoader.cpp  OrbitalApplication.cpp  Scene.cpp  SceneManager.cpp  ScriptsLibraryLoader.cpp  SettingManager.cpp  SettingsManager.cpp  StatisticManager.cpp  VirtualRenderer.cpp
Orbital/OrbitalImGui/: CMakeLists.txt
Orbital/OrbitalImGui/assets/: default_imgui.ini
Orbital/OrbitalImGui/src/: Core.cpp  DebugLayer.cpp  glfw_example.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp  main.cpp
Orbital/OrbitalInputs/: CMakeLists.txt
Orbital/OrbitalInputs/src/: Event.cpp
Orbital/OrbitalPhysics/: CMakeLists.txt
Orbital/OrbitalPhysics/src/: Calculations.cpp  Engine.cpp  PointCollider.cpp  SphereCollider.cpp  Transform.cpp
Orbital/OrbitalPhysics/tests/: physics_test.cpp
Orbital/OrbitalRenderer/: CMakeLists.txt
Orbital/OrbitalRenderer/src/: LowRenderer.cpp
Orbital/OrbitalScripts/: CMakeLists.txt
Orbital/OrbitalScripts/src/: Camera2DController.cpp  FPSCameraController.cpp  FreeCameraController.cpp
Orbital/OrbitalTools/: CMakeLists.txt
Orbital/OrbitalTools/src/: Chrono.cpp  Context.cpp  Files.cpp  Random.cpp  Time.cpp  UUID.cpp
OrbitalDemo/: CMakeLists.txt
OrbitalDemo/Demo/: CMakeLists.txt
OrbitalDemo/Demo/src/: main.cpp
OrbitalDemo/DemoLibrary/: CMakeLists.txt
OrbitalDemo/DemoLibrary/src/: Application.cpp
OrbitalDemo/DemoScripts/: CMakeLists.txt
OrbitalDemo/DemoScripts/src/: CoreScript.cpp  EnemyScript.cpp  PlayerController.cpp
OrbitalDemo/include/OrbitalDemo/: DemoApplication.h  MainScene.h
OrbitalDemo/src/: DemoApplication.cpp  main.cpp
OrbitalECS/: CMakeLists.txt
OrbitalECS/DemoScripts/src/: CoreScript.cpp  PlayerController.cpp  ProjectileScript.cpp  WeaponPickup.cpp
OrbitalECS/include/OrbitalECS/: BaseEntity.h  Containers.h  Context.h  Core.h  ECS.h  EntityHandle.h  Handle.h  Pool.h  Registry.h
OrbitalECS/src/: ECS.cpp  Handle.cpp  Registry.cpp
OrbitalECS/tests/: CMakeLists.txt  ecs_test.cpp
OrbitalEditor/: CMakeLists.txt
OrbitalEditor/include/OrbitalEditor/: Application.h  EditorApplication.h
OrbitalEditor/src/: Application.cpp  EditorApplication.cpp  main.cpp
OrbitalEngine/: CMakeLists.txt  create_game_executable_macro.cmake  create_game_library_macro.cmake  create_game_scripts_macro.cmake
OrbitalEngine/assets/shaders/: Base.fs.glsl  Sphere.fs.glsl  base.fs.glsl  base.vs.glsl
OrbitalEngine/include/OrbitalEngine/: Components.h  Context.h  Entity.h  HighRenderer.h  Library.h  LibraryLoader.h  OrbitalApplication.h  Scene.h  SceneManager.h  ScriptsLibraryLoader.h  Services.h  Settings.h  SettingsManager.h  ShaderProgram.h  SharedApplication.h  VertexContainer.h
OrbitalEngine/src/: ECSManager.cpp  Entity.cpp  HighRenderer.cpp  Library.cpp  LibraryLoader.cpp  NativeScript.cpp  NativeScriptManager.cpp  OrbitalApplication.cpp  PhysicsComponent.cpp  RigidBodyComponent.cpp  Scene.cpp  SceneManager.cpp  ScriptsLibraryLoader.cpp  SettingsManager.cpp  ShaderProgram.cpp  VertexContainer.cpp  VirtualRenderer.cpp
OrbitalEngine/src/ECS/: ECSManager.cpp  Entity.cpp
OrbitalEngine/src/Graphics/: Camera.cpp  HighRenderer.cpp  ShaderProgram.cpp  VertexContainer.cpp
OrbitalEngine/src/Linux/: ScriptsLibraryLoader.cpp
OrbitalEngine/src/MeshRenderers/: BaseRenderer.cpp  SphereRenderer.cpp
OrbitalEngine/src/Physics/: Collider.cpp  PhysicsCalculations2D.cpp  PhysicsCalculations3D.cpp  PhysicsEngine.cpp  PlaneCollider.cpp  Solver.cpp  SphereCollider.cpp
OrbitalEngine/src/Services/: ApplicationServices.cpp  ECSInterface.cpp  ECSService.cpp  PhysicsEngineInterface.cpp  PhysicsInterface.cpp  PhysicsService.cpp  RendererInterface.cpp  RendererService.cpp  ScenesInterface.cpp  ScenesService.cpp  ScriptEngineInterface.cpp  ScriptEngineService.cpp  SettingsInterface.cpp
OrbitalEngine/src/Windows/: ScriptsLibraryLoader.cpp
OrbitalFPSDemo/FPSDemo/: CMakeLists.txt
OrbitalFPSDemo/FPSDemo/src/: main.cpp
OrbitalFPSDemo/FPSDemoLibrary/: CMakeLists.txt
OrbitalFPSDemo/FPSDemoLibrary/src/: Application.cpp
OrbitalFPSDemo/FPSDemoScripts/: CMakeLists.txt
OrbitalFPSDemo/FPSDemoScripts/src/: CoreScript.cpp  EnemyScript.cpp  PlayerController.cpp  ProjectileScript.cpp  WeaponPickup.cpp
OrbitalImGui/: CMakeLists.txt
OrbitalInputs/: CMakeLists.txt
OrbitalInputs/include/OrbitalInputs/: Context.h  Core.h  InputManager.h  Inputs.h
OrbitalInputs/src/GLFW/: InputManager.cpp  Inputs.cpp
OrbitalLogger/: CMakeLists.txt
OrbitalLogger/include/OrbitalLogger/: Context.h  Logger.h
OrbitalLogger/src/: Logger.cpp
OrbitalPhysics/: CMakeLists.txt
OrbitalPhysics/include/OrbitalPhysics/: Algorithms.h  Calculations.h  Colliders.h  Context.h  Engine.h  PhysicsEngine.h  RigidBodyData.h  Tools.h  Transform.h
OrbitalPhysics/src/: Calculations.cpp  Colliders.cpp  Engine.cpp  PhysicsEngine.cpp  PointCollider.cpp  SphereCollider.cpp
OrbitalPhysics/tests/: CMakeLists.txt  physics_test.cpp
OrbitalRenderer/: CMakeLists.txt
OrbitalRenderer/include/OrbitalRenderer/: Containers.h  Context.h  IndexBuffer.h  LowRenderer.h  (+5 more)
OrbitalRenderer/src/: LowRenderer.cpp  Window.cpp
OrbitalScripts/: CMakeLists.txt
OrbitalScripts/src/: CoreDemoApplication.cpp  CoreEditorApplication.cpp  EnemyScript.cpp  FirstPersonController.cpp  FreeCameraController.cpp  PlayerController.cpp  ProjectileScript.cpp  SpawnEnemies.cpp  WeaponPickup.cpp
OrbitalTools/: CMakeLists.txt
OrbitalTools/src/: Chrono.cpp  Files.cpp  Random.cpp  Time.cpp  UUID.cpp
(+345 files in other folders)
